# CapitolTradesBenchmark

./: .env.example  .gitignore  CLAUDE.md  PHASES.md  README.md  config.py  main.py  probe_data_sources.py  pyproject.toml  scheduler.py  seed_database.py
scripts/: import_trendlyne_mccaul.py  probe_finnhub_depth.py  probe_house_depth.py
src/api/: app.py  routes_misc.py  routes_politicians.py  routes_portfolio.py  routes_subscriptions.py
src/db/: database.py  repositories.py
src/models/: politician.py  portfolio.py  subscription.py  trade.py
src/scraper/: finnhub_client.py  fmp_enrichment.py  house_scraper.py  price_fetcher.py
src/services/: alert_service.py  index_compare.py  metrics.py  portfolio_calc.py  trade_service.py
src/telegram/: bot.py
static/: index.html
static/css/: style.css
static/js/: api.js  app.js  charts.js
tests/: conftest.py
tests/integration/: test_db_pipeline.py
tests/unit/: test_finnhub_client.py  test_metrics.py  test_models.py  test_portfolio_calc.py  test_price_fetcher.py  test_repositories.py
